<resources>
    <string name="app_name">Ao Dispor</string>

    <!-- Navbar -->
    <!--string name="profile_icon">Ir para o seu perfil</string>
    <string name="stack_icon">Ir para a pilha de cartões</string-->
    <string name="navigation_drawer_open">abrir menu de navegação</string>
    <string name="navigation_drawer_close">fechar menu de navegação</string>

    <!-- Profile Card -->
    <string name="register_name">O seu nome</string>
    <string name="register_location">A sua localização</string>
    <string name="register_price">O seu preço</string>
    <string name="register_profession">A sua profissão</string>
    <string name="register_description">Descreva aqui o que faz&#8230;</string>
    <string name="register_completion">Inscrição como profissional completa</string>
    <string name="profile_registered_note_msg">Inscrito</string>
    <string name="profile_image_contentdescription">imagem de perfil</string>
    <string name="profile_image_label">Toque na imagem acima para alterar a sua imagem de perfil</string>
    <string name="profile_name_edit_hint">Escreva aqui o seu nome</string>
    <string name="profile_profession_edit_hint">Escreva aqui a sua profissão</string>
    <string name="profile_location_edit_hint">Escreva aqui a sua localização</string>
    <string name="profile_price_edit_hint">Toque aqui para editar o seu valor</string>
    <string name="profile_professionaldescription_edt_hint">Escreva aqui a descrição</string>
    <string name="profile_price">%1$d €</string>

    <!--user request form-->
    <string name="userrequest_requestdescription_label">Explique aqui o que precisa que seja feito…</string>
    <string name="userrequest_requestdescription_edit_hint">Escreva aqui a descrição do pedido</string>
    <string name="userrequest_created_in">pedido criado em&#8230;</string>
    <string name="request_form_looking_for_hint">Escreva que profissional procura</string>
    <string name="request_form_looking_for_label">De quem precisa?</string>
    <string name="request_form_send">Clique aqui para enviar pedido</string>
    <string name="request_form_where_label">Onde?</string>

    <!-- Request Card -->
    <string name="request_expired_card_note">Última oportunidade para responder a este pedido</string>
    <string name="left_to_expire"> até expirar</string>
    <string name="days">dias</string>
    <string name="day">dia</string>

    <!-- Invalid Card -->
    <string name="invalid_card_title">Dados inválidos</string>
    <string name="invalid_card_description">Esta carta apresenta dados corrompidos. Se possível, comunique à equipa AoDispor o sucedido.</string>

    <!-- Price Dialog -->
    <string name="profile_price_final">O seu preço é final?</string>
    <string name="profile_price_method">O seu serviço é oferecido como?</string>
    <string name="profile_price_type_hour">Por hora</string>
    <string name="profile_price_type_day">Por dia</string>
    <string name="profile_price_type_service">Por serviço</string>
    <string name="dialog_price">%1$d</string>
    <string name="hour">hora</string>
    <string name="service">serviço</string>

    <!-- Location Dialog -->
    <string name="zip_dialog">Insira o seu código postal</string>
    <string name="your_location_is_dialog">A sua localização é: </string>
    <string name="dash">-</string>
    <string name="zip1_hint">0000</string>
    <string name="zip2_hint">000</string>

    <!-- Phone Number Request -->
    <string name="phonerequest_textbox">Número de telemóvel</string>
    <string name="phonerequest_button">Entrar</string>
    <string name="phone_hint">000 000 000</string>
    <string name="phone_country_code">+351</string>

    <!-- SMS Code Request -->
    <string name="smsvalidation_textbox">Insira código de validação</string>
    <string name="smsvalidation_button">Validar</string>

    <!-- User Requests Fragment -->
    <string name="missing_fields_toast">todos os campos têm que estar preenchidos</string>
    <string name="request_uploaded_successfully">pedido enviado com sucesso</string>
    <string name="request_upload_failed">o envio do pedido falhou</string>

    <!-- Permissions Messages
    23>= versions display an informative dialog box before showing the system permission dialog
    23< versions aks "permission" in a single dialog box (system permissions were already given when app was instaled, just makes the actions clear to the user)
    -->
    <string name="permisson_accepted">Autorizado</string>
    <string name="permisson_denied">Não Autorizado</string>
    <string name="request_permission_phone">O Ao Dispor precisa de saber o seu número de telemóvel</string>
    <string name="request_permission_sms">O Ao Dispor precisa de ter acesso aos SMS para obter o seu código de validação</string>
    <string name="request_permission_internet">O Ao Dispor pretende ter acesso à Internet</string>
    <string name="request_permission_phone_version_plus23">O Ao Dispor precisa de saber o seu número de telemóvel</string>
    <string name="request_permission_sms_version_plus23">O Ao Dispor precisa de ter acesso aos SMS para obter o seu código de validação</string>
    <string name="request_permission_internet_version_plus23">O Ao Dispor pretende ter acesso à Internet</string>

    <!-- Other Messages -->
    <string name="loading">A actualizar&#8230;</string>
    <string name="timeout">Ups! Parece que ocorreu um erro :(\n Verifique a sua ligação.</string>
    <string name="discard">Descartar</string>string>
    <string name="query_too_short">Palavra demasiado curta</string>
    <string name="cannot_load_image">Não foi possível carregar a sua imagem.</string>
    <string name="professional_distance_display">&#160;(a XXX)</string>>
    <string name="meters">metros</string>
    <string name="kilometers_symbol">km</string>

    <!-- Generic Messages -->
    <string name="okay">Certo</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="deny">Rejeitar</string>
    <string name="understood">Entendi</string>
    <string name="next">Seguinte</string>
    <string name="previous">Anterior</string>
    <string name="empty">Vazio</string>
    <string name="retry">Tentar novamente</string>

    <string name="search_bar_hint">De quem precisa hoje?</string>
    <string name="search_bar_toast">A pesquisa deverá ter no mínimo cinco caracteres</string>
    <string name="permission_request_location">Para lhe mostrarmos profissionais perto de si precisamos de aceder à sua localização.</string>

    <!-- Floating Action Menu -->
    <string name="share">Partilhar</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="call">Telefonar</string>
    <string name="back">Voltar</string>

    <!-- Onboarding -->
    <string name="new_user">Novo utilizador</string>
    <string name="returning_user">Já tenho uma palavra-passe</string>
    <string name="validate">Validar</string>
    <string name="send_another"><u>Enviar de novo</u></string>
    <string name="phone_number">Número de telefone</string>
    <string name="validation_code">Código de validação</string>
    <string name="welcome_text">Bem-vindo ao\nAo Dispor.</string>
    <string name="ask_phone"> Para o podermos inscrever precisamos de lhe enviar uma SMS.</string>
    <string name="skip"><u>Não me inscrever agora.</u></string>
    <string name="insert_validation_code">Insira o código de 6 algarismos presente na SMS que recebeu.</string>
    <string name="sms_text">Vi o seu perfil no AoDispor.pt e gostaria de contratar os seus serviços. Podemos falar?</string>
    <string name="request_permission_gps">O Ao Dispor precisa usar o seu GPS para encontrar os profissionais mais perto de si.</string>
    <string name="http_error">Ocorreu um erro.</string>
    <string name="password_incomplete">O seu código de validação não está completo.</string>

    <!-- Amplify -->
    <string name="amplify_question_title">Está a gostar do Ao Dispor?</string>
    <string name="amplify_question_yes">Sim, gosto</string>
    <string name="amplify_question_no">Não, tenho críticas</string>
    <string name="amplify_positive_title">Poderia ajudar-nos com uma crítica positiva na Play Store?</string>
    <string name="amplify_positive_yes">Sim, posso recomendar-vos</string>
    <string name="amplify_positive_no">Não, fica para outra altura</string>
    <string name="amplify_negative_question">Poderia explicar-nos como poderemos melhorar?</string>
    <string name="amplify_negative_yes">Tenho sugestões</string>
    <string name="amplify_negative_no">Noutra altura</string>
    <string name="amplify_thanks">Obrigado por nos ajudar a servi-lo!</string>
    <string name="label_select_picture">Selecionar imagem</string>
    <string name="request_permission_read_storage">O Ao Dispor pretender aceder às suas fotografias.</string>

    <!-- navigation -->
    <string name="nav_search">Procurar</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_requests">brevemente - Pedidos</string>
    <string name="nav_login">Login/Inscrição</string>
    <string name="nav_aboutus">Sobre o AoDispor</string>


    <string name="no_response_from_AoDispor">Sem resposta de AoDispor</string>
    <string name="professional_image_contentdescription">Imagem do profissional</string>

    <string name="about_aodispor_text">
\nSem intermediários, o Ao Dispor coloca-o em contacto directo com os profissionais perto da sua área.
\n\nVeja quem oferece os seus serviços profissionais perto de si, e com um simples toque no ecrã telefone-lhes sem compromisso.
\n\nO Ao Dispor é o serviço inteiramente gratuito que tem vindo a fazer com que milhares de portugueses aumentem os seus rendimentos ao oferecer os seus serviços à hora! Ganhe dinheiro trabalhando para as pessoas da sua região.
</string>

</resources>
