<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/zip_dialog"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/zip1"
            android:hint="@string/zip1_hint"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"/>
        <EditText
            android:id="@+id/zip2"
            android:hint="@string/zip2_hint"
            android:maxLength="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:text="@string/your_location_is_dialog"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/your_location"
        android:layout_centerHorizontal="true">

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_progress_bar"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:layout_marginBottom="20dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>