<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aoDispor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/profile_base"
        >

        <include layout="@layout/shared__not_loaded_page" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_centerHorizontal="true"
                android:background="@color/aoDispor2"
                app:srcCompat="@mipmap/ic_account_circle_white_48dp"
                android:contentDescription="@string/profile_image_contentdescription" />

        </RelativeLayout>

        <TextView
            android:id="@+id/imageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="20dp"
            android:paddingEnd="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingStart="50dp"
            android:text="@string/profile_image_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/register_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <pt.aodispor.android.features.profile.ProfileEditText
            android:imeOptions="actionDone"
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/profile_name_edit_hint"
            android:inputType="textPersonName"
            android:maxLength="@integer/name_maxsize"
            android:padding="20dp"
            android:textColor="@color/grey3"
            android:textColorHint="@color/grey3"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/register_profession"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <pt.aodispor.android.features.profile.ProfileEditText
            android:imeOptions="actionDone"
            android:id="@+id/professionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/profile_profession_edit_hint"
            android:inputType="text"
            android:maxLength="@integer/profession_maxsize"
            android:padding="20dp"
            android:textColor="@color/grey3"
            android:textColorHint="@color/grey3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/register_location"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/locationEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/profile_location_edit_hint"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/grey3"
            android:textColorHint="@color/grey3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/register_price"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/profile_price_edit_hint"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/grey3"
            android:textColorHint="@color/grey3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/register_description"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <pt.aodispor.android.features.profile.ProfileEditText
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/profile_professionaldescription_edt_hint"
            android:maxLength="@integer/description_maxsize"
            android:padding="20dp"
            android:textColor="@color/grey3"
            android:textColorHint="@color/grey3"
            android:textSize="20sp"
            />

    </LinearLayout>
</ScrollView>