<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonerequest_textbox"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="18dp"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/phonebox_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_country_code"
            android:text="@string/phone_country_code"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/phonebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:maxLength="9"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:text="@string/phonerequest_button"
        android:textSize="18sp" android:layout_gravity="center_horizontal"/>

</LinearLayout>