<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutContainer"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true">

                <TextView android:text="@string/insert_validation_code"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent" />

                <EditText
                    android:id="@+id/validation_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="10"
                    android:hint="@string/validation_code"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center" />

                <Button
                    android:text="@string/validate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:id="@+id/validate_button" />

                <Button
                    android:text="@string/send_another"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_another_button" />

                <Button
                    android:text="@string/skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/skip_button3" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">
        </RelativeLayout>
    </LinearLayout>
</com.redbooth.WelcomePageLayout>
