<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutContainer"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:background="?attr/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true">

                <TextView android:text="@string/ask_phone"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_width="match_parent" />

                <com.lamudi.phonefield.PhoneEditText
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center">
                </com.lamudi.phonefield.PhoneEditText>

                <Button
                    android:text="@string/new_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:id="@+id/new_user" />

                <Button
                    android:text="@string/returning_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/returning_user" />

                <Button
                    android:text="@string/skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/skip_button2" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.15">
        </RelativeLayout>
    </LinearLayout>
</com.redbooth.WelcomePageLayout>
